# file-explorer-warp

./: Cargo.toml  README.md  themes.json
assets/: AppIcon.icns
src/: app.rs  main.rs
src/core/: bookmarks.rs  config.rs  fs.rs  global_tags.rs  mod.rs  search.rs  tags.rs  terminal.rs  themes.rs
src/git/: diff.rs  graph.rs  mod.rs  operations.rs  repo.rs
src/platform/: clipboard.rs  drag.rs  fonts.rs  mod.rs  opener.rs  quicklook.rs  share.rs
src/ui/: file_list.rs  git_panel.rs  mod.rs  prefs.rs  search_overlay.rs  sidebar.rs  tab_bar.rs  terminal_panel.rs  toasts.rs
