[package]
name = "file-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
xattr = "1"
plist = "1"
nucleo = "0.5"
git2 = { version = "0.19", features = ["vendored-openssl"] }
portable-pty = "0.8"
vte = "0.13"
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSWorkspace",
    "NSPasteboard",
    "NSSharingService",
    "NSApplication",
    "NSRunningApplication",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
objc2-foundation = "0.2"

[package.metadata.bundle]
name = "FileExplorer"
identifier = "com.jerry.fileexplorer"
version = "0.1.0"
copyright = "Jerry"
category = "public.app-category.utilities"
osx_minimum_system_version = "12.0"
icon = ["assets/AppIcon.icns"]
